substrate/frame/election-provider-support/solution-type/tests/ui/fail/missing_target.stderr
error: Expected binding: `TargetIndex = ...`
  --> tests/ui/fail/missing_target.rs:22:2
   |
22 |     u8,
   |     ^^
